--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   "homepage": "https://github.com/gXLg/cocli#readme",
   "dependencies": {
     "axios": "^1.7.7",
-    "he": "^1.2.0"
+    "cheerio": "^1.0.0"
   }
 }
